package edu.hitsz.aircraft;

public enum EnemyType {
    MOB, ELITE, VETERAN, ACE, BOSS;
}